Fix on header background flashing on mobile devices
Fixed bug that was causing the header background color blink while the
menu closes and page scrolls on mobile devices.

--- a/assets/css/src/base.css
+++ b/assets/css/src/base.css
@@ -58,10 +58,10 @@
     display: inline;
 }
 
-.inline-block,
-.vcenter,
 .btn,
-.label {
+.label,
+.vcenter,
+.inline-block {
     display: inline-block;
 }
 
@@ -297,8 +297,8 @@ textarea {
 
 /*=============================== MISC ===============================*/
 
-.wrapper-large,
 .wrapper,
+.wrapper-large,
 .centered {
     margin: 0 auto;
 }
